--- a/index.html
+++ b/index.html
@@ -1,16 +1,162 @@
 <!DOCTYPE html>
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <title>Impression</title>
-</head>
-
-<body>
-
-	<h1>Make an impression</h1>
-
-	<script src="javascripts/jquery.js"></script>
-	<script src="javascripts/impression.js"></script>
-
-</body>
+<html lang="en">
+  <head>
+    <title>Impression Kitchen Sink</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700">
+    <script src="javascripts/jquery.js"></script>
+    <script src="javascripts/impression.js"></script>
+  </head>
+  <body>
+    <h1 class="center">Impression Kitchen Sink</h1>
+    <div class="spacing">
+      <button class="button">button regular</button>
+    </div>
+    <div class="spacing">
+      <button class="button red">button red</button>
+    </div>
+    <div class="spacing">
+      <button class="button green">button green</button>
+    </div>
+    <div class="spacing">
+      <button class="button blue">button blue</button>
+    </div>
+    <ul class="tabs">
+      <li class="active">active tab</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <div class="tab active">here is an active tab</div>
+    <div class="row">
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+      <div class="col1">
+        <div class="well"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col2">
+        <div class="well"></div>
+      </div>
+      <div class="col2">
+        <div class="well"></div>
+      </div>
+      <div class="col2">
+        <div class="well"></div>
+      </div>
+      <div class="col2">
+        <div class="well"></div>
+      </div>
+      <div class="col2">
+        <div class="well"></div>
+      </div>
+      <div class="col2">
+        <div class="well"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col3">
+        <div class="well"></div>
+      </div>
+      <div class="col3">
+        <div class="well"></div>
+      </div>
+      <div class="col3">
+        <div class="well"></div>
+      </div>
+      <div class="col3">
+        <div class="well"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col4">
+        <div class="well"></div>
+      </div>
+      <div class="col4">
+        <div class="well"></div>
+      </div>
+      <div class="col4">
+        <div class="well"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col6">
+        <div class="well"></div>
+      </div>
+      <div class="col3">
+        <div class="well"></div>
+      </div>
+      <div class="col3">
+        <div class="well"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col6">
+        <div class="row">
+          <div class="col6">
+            <div class="well"></div>
+          </div>
+          <div class="col6">
+            <div class="well"></div>
+          </div>
+        </div>
+      </div>
+      <div class="col6">
+        <div class="row">
+          <div class="col3">
+            <div class="well"></div>
+          </div>
+          <div class="col3">
+            <div class="well"></div>
+          </div>
+          <div class="col6">
+            <div class="row">
+              <div class="col4">
+                <div class="well"></div>
+              </div>
+              <div class="col4">
+                <div class="well"></div>
+              </div>
+              <div class="col4">
+                <div class="well"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
