added overlay to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="javascripts/impression.js"></script>
   </head>
   <body>
+    <div class="overlay">
+      <div class="overlay-content">
+        <div class="overlay-hdr" onclick="">
+          <a class="destroy">X</a>
+          <h1 class="overlay-h1"></h1>
+        </div>
+        <div class="overlay-body"></div>
+      </div><!-- /content -->
+      <div class="overlay-bg" onclick=""></div>
+    </div>
     <h1 class="center">Impression Kitchen Sink</h1>
     <div class="spacing">
       <button class="button">button regular</button>
