Add overlay script to head; update jade template to feature overlay; set impression as overriding import on style.scss; update config.rb to review the stylesheets dir; disable js test alert on impression.js

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700">
     <script src="javascripts/jquery.js"></script>
     <script src="javascripts/impression.js"></script>
+    <script src="javascripts/overlay.js"></script>
   </head>
   <body>
+    <h1 class="center">Impression Kitchen Sink</h1>
     <div class="overlay">
       <div class="overlay-content">
-        <div class="overlay-hdr" onclick="">
-          <a class="destroy">X</a>
+        <div onclick="" class="overlay-hdr"><a class="destroy">X</a>
           <h1 class="overlay-h1"></h1>
         </div>
         <div class="overlay-body"></div>
-      </div><!-- /content -->
-      <div class="overlay-bg" onclick=""></div>
+      </div>
+      <div onclick="" class="overlay-bg"></div>
     </div>
-    <h1 class="center">Impression Kitchen Sink</h1>
     <div class="spacing">
       <button class="button">button regular</button>
     </div>
