put buttons next to each other and set max-width to be no more than 90% b/c of the :before prop

--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
       </div>
       <div onclick="" class="overlay-bg"></div>
     </div>
-    <div class="spacing">
-      <button class="button">button regular</button>
-    </div>
-    <div class="spacing">
-      <button class="button red">button red</button>
-    </div>
-    <div class="spacing">
-      <button class="button green">button green</button>
-    </div>
-    <div class="spacing">
-      <button class="button blue">button blue</button>
+    <div class="row">
+      <div class="col3">
+        <button class="button">button regular</button>
+      </div>
+      <div class="col3">
+        <button class="button red">button red</button>
+      </div>
+      <div class="col3">
+        <button class="button green">button green</button>
+      </div>
+      <div class="col3">
+        <button class="button blue">button blue</button>
+      </div>
     </div>
     <ul class="tabs">
       <li class="active">active tab</li>
