real name on README; added tabs v0.1 js/scss/css (known bug - parent height of tab container must be set for active tab to fill it, must review to make dynamic); std-sizing mixing provides box-sizing(border-box) support to IE<8. see comments for URL to box-sizing-polyfill project

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <button class="button blue">button blue</button>
       </div>
     </div>
-    <ul class="tabs">
-      <li class="active">active tab</li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-    <div class="tab active">here is an active tab</div>
+    <div class="tabs">
+      <ul class="nav">
+        <li><a href="#tab1">active tab</a></li>
+        <li><a href="#tab2">second tab</a></li>
+      </ul>
+      <div id="tab1" class="tab">here is an active tab</div>
+      <div id="tab2" class="tab">here is a second tab</div>
+    </div>
     <div class="row">
       <div class="col1">
         <div class="well"></div>
